# mp2-lab2-matrix

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  README.md  run_tests.sh  setup_cmake.sh  tidy.sh
include/: abbrev.hxx  checked_arith.hxx  fwd.hxx  mat.hxx  mat_maj.hxx  owned_mat.hxx  owned_vec.hxx  vec.hxx
samples/: CMakeLists.txt  sample_matrix.cpp
tests/: CMakeLists.txt  mat.cpp  vec.cpp
